rename fitbit studio project

--- a/sdk-4.2/package.json
+++ b/sdk-4.2/package.json
@@ -21,7 +21,7 @@
     ],
     "i18n": {
       "en-US": {
-        "name": "Omega Speedmaster SDK v4.2"
+        "name": "Chronograph Versa, Versa 2"
       }
     },
     "defaultLanguage": "en-US"
