--- a/sdk-5.0/package.json
+++ b/sdk-5.0/package.json
@@ -5,7 +5,7 @@
   "fitbit": {
     "appUUID": "d736d6c7-2404-4a1d-8e9e-241023ac7960",
     "appType": "clockface",
-    "appDisplayName": "Omega Speedmaster SDK 5.0",
+    "appDisplayName": "Chronograph Sense/Versa 3",
     "iconFile": "resources/icon.png",
     "wipeColor": "#f44336",
     "requestedPermissions": [
