--- a/sdk-4.2/package.json
+++ b/sdk-4.2/package.json
@@ -5,7 +5,7 @@
   "fitbit": {
     "appUUID": "e942e96f-e8f7-4bbe-921d-1622d25a7c3b",
     "appType": "clockface",
-    "appDisplayName": "Chronograph Versa, Versa 2",
+    "appDisplayName": "Analog Multi-dial Chronagraph",
     "iconFile": "resources/icon.png",
     "wipeColor": "#607d8b",
     "requestedPermissions": [
@@ -21,7 +21,7 @@
     ],
     "i18n": {
       "en-US": {
-        "name": "Chronograph Versa, Versa 2"
+        "name": "Analog Multi-dial Chronagraph"
       }
     },
     "defaultLanguage": "en-US"
